--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -65,6 +67,13 @@ body {
     font-size: 60px;
     font-weight: 700;
     letter-spacing: 35px;
+
+    animation: moveInLeft 1s ease-out;
+
+    /** 
+    animation-iteration-count: 3;
+    animation-delay: 3s;
+    */
 }
 
 .heading-primary-sub {
@@ -73,4 +82,36 @@ body {
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 17.4px;
+
+    animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translatex(-100px)
+    }
+
+    80% {
+        transform: translatex(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translatex(100px);
+    }
+
+    80% {
+        transform: translatex(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
